--- a/index.html
+++ b/index.html
@@ -1,184 +1,202 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="icon" href="./images/favicon-32x32.png" />
   </head>
   <body>
     <header class="header">
-        <nav class="header__menu">
-          <ul class="header__links-list">
-            <li class="header__links-list-item links-list-item_no-bullit">
-              <a class="links-list-item_no-bullit" href="#0"> главная</a>
-            </li>
-            <li class="header__links-list-item">
-              <a class="link" href="#0">посмотреть лоты</a>
-            </li>
-            <li class="header__links-list-item">
-              <a class="link" href="#0">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="header__logo" href="#0"> 
-          <img
-          class="header__logo-image" 
-          src="./images/logo-black.svg" 
-          alt="Логотип черного цвета">
-        </a>
-          <address class="address">
-            <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
-            <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-            <p>
-              наб. Принсенграхт 263- 
-              <br>
-              265, Амстердам
-            </p>
-          </address>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item links-list-item_no-bullit">
+            <a class="link links-list-item_active" href="#0"> главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="link " href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo" href="#0">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип черного цвета"
+        />
+      </a>
+      <address class="address">
+        <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>
+          наб. Принсенграхт 263-
+          <br />
+          265, Амстердам
+        </p>
+      </address>
     </header>
     <main>
-      <section class="cover"> 
+      <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text letter-spacing_unextended">О<span class="letter-spacing_extended">но</span></span> 
-          <span class="aligned-text_center letter-spacing_unextended">те<span class="letter-spacing_extended">бе</span></span> 
-        <span class="aligned-text_right"><span class="letter-spacing_extended">н</span><span class="letter-spacing_unextended">ад</span>о</span>
+          <span class="aligned-text letter-spacing_unextended"
+            >О<span class="letter-spacing_extended">но</span></span
+          >
+          <span class="aligned-text aligned-text_center letter-spacing_unextended"
+            >те<span class="letter-spacing_extended">бе</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing_extended">н</span
+            ><span class="letter-spacing_unextended">ад</span>о</span
+          >
         </h1>
-        <div class="cover__description">  
+        <div class="cover__description">
           <p class="cover__description-text">
-          Аукцион вещей, в которые никто не верил
+            Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button" type="button">
-            Сделать ставку
-          </button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
-            <ul class="lots__card-list">
-              <li class="lots__card-list-item">
-                <a class="card-link" href="#0">
-                <article class="card card_type_film">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-                  <p class="card__text">
-                    Не просто бросил, а ушёл с первой лекции. 
-                    Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон? 
-                  </p>
-                </article>  
-              </a>
-              </li>
-              <li class="lots__card-list-item">
-                <a class="card-link" href="#0">
-                <article class="card card_type_book">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                  <p class="card__text">
-                    Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
-                    В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
-                    И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса? 
-                  </p>
-                </article>  
-              </a>
-              </li>
-              <li class="lots__card-list-item">
-                <a class="card-link" href="#0">
-                <article class="card card_type_picture">
-                  <div class="overlay"></div>
-                  <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-                  <p class="card__text">
-                    Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
-                    Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, 
-                    если бы не знали, что это — одна из революционных работ Кандинского?
-                  </p>
-                </article>  
-              </a>
-              </li>
-              </ul>
-                <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="about__logo"> 
+        <div class="about__logo">
           <img
-          class="about__logo-image"
-          src="./images/logo-white.svg"
-          alt="Логотип на черном фоне"
-              >
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Логотип на черном фоне"
+          />
         </div>
-          <article class="about__column">
-            <h2 class="about__title">
-              Об аукционе
-            </h2>
-            <p class="about__text about__letter-spacing">
-              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
-              Наши лоты вообще не должны были попасть ни на один аукцион. 
-              Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? 
-              Кому нужны все эти странные вещи, созданные любителями?
-            </p>
-            <p class="about__text">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
-              В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря 
-              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
-              Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
-            </p>
-          </article>
+        <article class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
+          <p class="about__text about__letter-spacing">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </article>
       </section>
     </main>
     <footer class="footer">
       <address class="address">
-        <a class="link" href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a class="link" href="tel:+99995555555">+9 999 555 5555</a><br />
         <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
-          наб. Принсенграхт 263- 
-          <br>
+          наб. Принсенграхт 263-
+          <br />
           265, Амстердам
         </p>
       </address>
-        <nav class="footer__menu">
-          <ul class="footer__menu-list">
-            <li>
-              <a class="links-list-item_no-bullit" href="#0">главная</a>
-            </li>
-            <li>
-              <a class="link" href="#0">посмотреть лоты</a>
-            </li> 
-            <li>
-              <a class="link" href="#0">об аукционе</a> 
-            </li>
-          </ul>
-        </nav>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li>
+            <a class="link links-list-item_active" href="#0">главная</a>
+          </li>
+          <li>
+            <a class="link" href="#0">посмотреть лоты</a>
+          </li>
+          <li>
+            <a class="link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
       <ul class="footer__social-list">
-      <li>
-      <a href="#0">
-        <img
-        class="footer__social-icon"
-        src="./images/yt.svg"
-        alt="Лого Youtube"
-        >
-      </a>
-      </li>
-      <li>
-      <a href="#0">
-        <img
-        class="footer__social-icon"
-        src="./images/vk.svg"
-        alt="Лого VK"
-        >
-      </a>
-      </li>
-      <li>
-        <a href="#0">
-          <img
-          class="footer__social-icon"
-          src="./images/pinterest.svg"
-          alt="Лого Pinterest"
-          >
-        </a>
+        <li>
+          <a href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Лого Youtube"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Лого VK"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Лого Pinterest"
+            />
+          </a>
         </li>
       </ul>
     </footer>
