--- a/index.html
+++ b/index.html
@@ -21,18 +21,14 @@
             <a class="link" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="link " href="#0">об аукционе</a>
+            <a class="link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <a class="header__logo" href="#0">
-        <img
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="Логотип черного цвета"
-        />
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип черного цвета" />
       </a>
-      <address class="address">
+      <address class="address header__address">
         <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
@@ -46,16 +42,9 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text letter-spacing_unextended"
-            >О<span class="letter-spacing_extended">но</span></span
-          >
-          <span class="aligned-text aligned-text_center letter-spacing_unextended"
-            >те<span class="letter-spacing_extended">бе</span></span
-          >
-          <span class="aligned-text aligned-text_right"
-            ><span class="letter-spacing_extended">н</span
-            ><span class="letter-spacing_unextended">ад</span>о</span
-          >
+          <span class="aligned-text letter-spacing_unextended">О<span class="letter-spacing_extended">но</span></span>
+          <span class="aligned-text aligned-text_center letter-spacing_unextended">те<span class="letter-spacing_extended">бе</span></span>
+          <span class="aligned-text aligned-text_right"><span class="letter-spacing_extended">н</span><span class="letter-spacing_unextended">ад</span>о</span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -75,9 +64,7 @@
                   Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="card__text">
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
                 </p>
               </article>
             </a>
@@ -90,12 +77,8 @@
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
                 <p class="card__text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё
+                  накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
                 </p>
               </article>
             </a>
@@ -108,41 +91,28 @@
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
                 <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ
+                  Кандинского?
                 </p>
               </article>
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0"><span class="link">посмотреть больше</span></a>
       </section>
       <section class="about">
         <div class="about__logo">
-          <img
-            class="about__logo-image"
-            src="./images/logo-white.svg"
-            alt="Логотип на черном фоне"
-          />
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип на черном фоне" />
         </div>
         <article class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <p class="about__text about__letter-spacing">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может
+            нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
           </p>
           <p class="about__text">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            представить современную культуру. Когда в эти вещи не верил никто,
-            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или
+            сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </article>
       </section>
@@ -173,29 +143,17 @@
       <ul class="footer__social-list">
         <li>
           <a href="#0">
-            <img
-              class="footer__social-icon"
-              src="./images/yt.svg"
-              alt="Лого Youtube"
-            />
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Лого Youtube" />
           </a>
         </li>
         <li>
           <a href="#0">
-            <img
-              class="footer__social-icon"
-              src="./images/vk.svg"
-              alt="Лого VK"
-            />
+            <img class="footer__social-icon" src="./images/vk.svg" alt="Лого VK" />
           </a>
         </li>
         <li>
           <a href="#0">
-            <img
-              class="footer__social-icon"
-              src="./images/pinterest.svg"
-              alt="Лого Pinterest"
-            />
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Лого Pinterest" />
           </a>
         </li>
       </ul>
